<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/testText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="What's Good!"
            android:textSize="30sp" />

        <com.example.rice_cs301_hw2.AvatarSurfaceView
            android:id="@+id/avatarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/selectionControlLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/colorSelectLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/redPromptTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/red_view"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/redSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="255"
                    android:progress="179" />

                <TextView
                    android:id="@+id/greenPromptTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/green_view"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/greenSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="255"
                    android:progress="119" />

                <TextView
                    android:id="@+id/bluePromptTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blue_view"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/blueSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="255"
                    android:progress="0" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/hairSelectLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hairStyleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hair_style"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/hairSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/radioBtnLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/faceAreaRGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/hairRButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10sp"
                        android:checked="true"
                        android:text="@string/hair_btn"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/eyesRButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10sp"
                        android:text="@string/eyes_btn"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/skinRButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10sp"
                        android:text="@string/skin_btn"
                        android:textSize="20sp" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>